kubernetes/apps/searxng/app/deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: searxng
  template:
    metadata:
      labels:
        app.kubernetes.io/name: searxng
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 977
        runAsGroup: 977
        fsGroup: 977
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: searxng
          image: &image ghcr.io/searxng/searxng:2026.10.7-6671d89be@sha256:cc026dbee25b864d7f9731957cd5ef36ba2e2d61abd2996d57f1b863483e7409
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          startupProbe:
            httpGet: &healthcheck
              path: /healthz
              port: http
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet: *healthcheck
          livenessProbe:
            httpGet: *healthcheck
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: defaults
              mountPath: /usr/local/searxng/settings.template.yml
              subPath: settings.yml
              readOnly: true
            - name: config
              mountPath: /etc/searxng
            - name: cache
              mountPath: /var/cache/searxng
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: defaults
          configMap:
            name: searxng-config
        - name: config
          persistentVolumeClaim:
            claimName: searxng-config
        - name: cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
