kubernetes/apps/searxng/app/service.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  selector:
    app.kubernetes.io/name: searxng
  ports:
    - name: http
      port: 8080
      targetPort: http
