kubernetes/apps/searxng/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
spec:
  parentRefs:
    - name: envoy-proxy
      namespace: kube-system
      sectionName: https
  hostnames:
    - search.jetersen.dev
  rules:
    - backendRefs:
        - name: searxng
          port: 8080
